Fix sponsor in Features

--- a/index.html
+++ b/index.html
@@ -69,11 +69,22 @@
                 <p class="text">5 Star Ratings (2k+ Review)</p>
             </div>
             <div class="brand">
-                <img src="./assets/img/logo1.svg" alt="Logo1" class="brand-sponsor">
-                <img src="./assets/img/logo2.svg" alt="Logo2" class="brand-sponsor">
-                <img src="./assets/img/logo3.svg" alt="Logo3" class="brand-sponsor">
-                <img src="./assets/img/logo4.svg" alt="Logo4" class="brand-sponsor">
-                <img src="./assets/img/logo5.svg" alt="Logo5" class="brand-sponsor">
+                <a href="#!">
+                    <img src="./assets/img/logo1.svg" alt="Logo1" class="brand-sponsor">
+                </a>
+                <a href="#!">
+                    <img src="./assets/img/logo2.svg" alt="Logo2" class="brand-sponsor">
+                </a>
+                <a href="#!">
+                    <img src="./assets/img/logo3.svg" alt="Logo3" class="brand-sponsor">
+                </a>
+                <a href="#!">
+                    <img src="./assets/img/logo4.svg" alt="Logo4" class="brand-sponsor">
+                </a>
+                <a href="#!">
+                    <img src="./assets/img/logo5.svg" alt="Logo5" class="brand-sponsor">
+
+                </a>
             </div>
         </div>
     </div>
@@ -326,4 +337,5 @@
         </div>
     </div>
 </body>
+
 </html>
