--- a/index.html
+++ b/index.html
@@ -6,22 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- css -->
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/font/StyleSheet.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <!-- Header -->
-    <div id="Home">
-        <header class="header">
+    <!-- =======navigation======= -->
+    <div class="navigation">
+        <nav class="navbar">
             <div class="content">
                 <nav class="navbar">
                     <!-- logo -->
-                    <img src="./assets/img/Logo.svg" alt="Besnik.">
+                    <a href="#" class="link"><img src="./assets/img/Logo.svg" alt="Besnik."></a>
                     <!-- navigation -->
                     <ul>
-                        <li><a href="#Home">Home</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="#Feature">Feature</a></li>
                         <li><a href="#Services">Services</a></li>
                         <li><a href="#Resources">Resources</a></li>
@@ -33,6 +54,13 @@
                         <a href="#!" class="btn action-btn">Sign up</a>
                     </div>
                 </nav>
+            </div>
+        </nav>
+    </div>
+    <!-- Header -->
+    <div id="Home">
+        <header class="header">
+            <div class="content">
                 <div class="hero">
                     <div class="information">
                         <p class="sub-title">Welcome to Besnik Agency</p>
